<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fon"
    tools:context=".ui.MenuFragment">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/my_font"
        android:gravity="center"
        android:text="@string/welcome_back_nlogin_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/round_play_button"
        android:fontFamily="@font/my_font"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_app_exit"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/mini_margin"
        android:layout_marginEnd="@dimen/mini_margin"
        android:layout_marginBottom="@dimen/mini_margin"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/my_font"
        android:text="@string/exit_from_app"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_rules"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/mini_margin"
        android:layout_marginBottom="@dimen/mini_margin"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/my_font"
        android:textSize="30sp"
        android:text="@string/rules"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ib_shop"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@mipmap/intro"
        android:text="@string/shop"
        android:fontFamily="@font/my_font"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:background="@drawable/round_play_button"
        app:layout_constraintBottom_toTopOf="@+id/btn_rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />


</androidx.constraintlayout.widget.ConstraintLayout>