<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/fon"
    tools:context=".ui.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/my_font"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/login_to_system_nenter_10_characters_or_less"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ib_cup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/cup"
        android:fontFamily="@font/my_font"
        android:text="@string/login_string"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tf_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_reg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/roundedbutton"
        android:maxLength="10"
        android:textColorHint="@color/black"
        android:layout_marginBottom="@dimen/margin_medium"
        app:boxBackgroundColor="@color/orange"
        android:layout_marginEnd="@dimen/margin_medium"
        android:hint="@string/login">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reg"
            android:background="@drawable/roundedbutton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:fontFamily="@font/my_font"
            android:maxLength="10"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>